--- a/index.html
+++ b/index.html
@@ -640,14 +640,15 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
     <label  for="1bottle"><span></span><b>One bottle of the PROSTATE WEL SOLUTION CAPSULES &#8358 25,000</b> </label>
      <input type="radio" name="amount" value="2bottle" id="2bottle" />
      <label for="2bottle"><span></span><b>Two bottles of the PROSTATE WEL SOLUTION CAPSULES  + Free consultation with a health specialist 
-          + Free eBook on prostate health & dietary tips..&#8358 40,000</b></label>
+          + Free eBook on prostate health & dietary tips &#8358 40,000</b></label>
      
      <input type="radio" name="amount" value="3bottle" id="3bottle" />
      <label for="3bottle"><span></span><b> Three bottles of the PROSTATE WEL SOLUTION CAPSULES + Free consultation with a health specialist 
-           + Free eBook on prostate health & dietary tips. + Access to a private WhatsApp group for support and updates. &#8358 50,000</b><span class="highlighted-text">BEST VALUE</span> </label>
+           + Free eBook on prostate health & dietary tips. + Access to a private WhatsApp group for support and connections. &#8358 50,000</b> </label>
      
      <input type="radio" name="amount" value="4bottle" id="4bottle" />
-     <label for="4bottle"><span></span><b> Four bottles of the PROSTATE WEL SOLUTION CAPSULES &#8358 60,000</b> </label>
+     <label for="4bottle"><span></span><b> Four bottles of the PROSTATE WEL SOLUTION CAPSULES + Free consultation with a health specialist 
+           + Free eBook on prostate health & dietary tips. + Access to a private WhatsApp group for support and connections.   &#8358 60,000</b> </label>
      <input type="hidden" name="conversion" value="button_click">
        <center> <button type="submit" id="submit-button" class="call-to-action-button" onclick="gtag_report_conversion();">GET MY PACK NOW</button> </center>
      </div>
@@ -760,7 +761,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
      <script type="text/javascript">
      function countdown() {
          const today = new Date();
-         var offerDate = new Date('30 August  2024');
+         var offerDate = new Date('30 November  2024');
 
          // If the offer has ended, reset to a new value
          if (today >= offerDate) {
