--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ function gtag_report_conversion(url) {
             color: #333;
             margin: 0;
             padding: 0;
+           font-size: 18px;
         }
         header, footer {
             background-color: #f4f4f4;
