--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ function gtag_report_conversion(url) {
             margin: 0;
             padding: 0;
            font-size: 18px;
+           line-height: 1.5;
         }
         header, footer {
             background-color: #f4f4f4;
