--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ ul.symptom-list li {
     margin-bottom: 10px; /* Space between items */
     display: flex; /* Align items horizontally */
     align-items: center; /* Center items vertically */
-    font-size: 16px; /* Adjust font size as needed */
+    font-size: 19px; /* Adjust font size as needed */
     color: #333; /* Text color */
     transition: background 0.3s ease, color 0.3s ease; /* Smooth background and text color transitions */
 }
@@ -297,7 +297,7 @@ p {
     font-style: italic;
 }
      .prostate-well-section {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
@@ -315,7 +315,7 @@ p {
 }
 
 .ingredient-list li {
-    font-size: 16px;
+    font-size: 18px;
     margin: 10px 0;
 }
 
@@ -373,7 +373,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <header>
         <div class="container">
-            <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYSS</h1>
+            <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYS</h1>
             <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR END OF YEAR DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
 
  </span</p>
