--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 </script>
 
      </script>
-     
+     <img src="img/Delivery.png">
      <h2 style="text-align: center"> Fill this Contact Form
      
      </h2>
