--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <header>
         <div class="container">
             <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYS</h1>
-            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR END OF YEAR DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
+            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR LIMITED-TIME-END-OF-YEAR-DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
 
  </span</p>
         </div>
@@ -460,7 +460,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         </ul>
     </div>
           <div class="testimonials">
-            <h2>Success Stories</h2>
+            <h2>What Nigerian Men Are Saying About Prostate Well</h2>
             <div class="testimonial">
                  <img class="imgtest" src="img/qw.png" alt="Avatar" style="width:90px">
                 <h5>Mr. Ade (53), Berger Lagos</h5>
