--- a/index.html
+++ b/index.html
@@ -499,7 +499,23 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         </div>
         <p><b><span style="color: red; font-weight: bold;">PLEASE NOTE</span>: All testimonials are from real people, with consent from them. In accordance with the latest FTC guidelines,
          we want to make it explicitly clear that the testimonials and customer letters we have received are exceptional results.</p></b>
-          <h3 class="hame"> Don't let skepticism hold you back any longer. If you don’t see noticeable improvement in 30 days, 
+          <section style="padding: 20px; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+  <h2 style="color: #2c3e50; font-family: 'Arial', sans-serif; text-align: center;">Recognized by Trusted Media: A Proven Solution for Prostate Health</h2>
+  <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6;">
+    <strong>Prostate Well</strong> has been featured in one of Nigeria's leading newspapers, highlighting its remarkable benefits for men over 40 suffering from prostate-related challenges. This recognition is a testament to our commitment to providing a natural, effective, and lasting solution for issues like frequent urination, urinary pain, and erectile dysfunction.
+  </p>
+  <h3 style="color: #27ae60; font-family: 'Arial', sans-serif; margin-top: 20px;">Why the Media is Talking About Prostate Well</h3>
+  <ul style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.8; list-style: none; padding-left: 0;">
+    <li>✔ <strong>100% Natural Ingredients</strong>: Backed by science, our herbal formula promotes prostate health without side effects.</li>
+    <li>✔ <strong>Proven Results</strong>: Countless men have experienced life-changing relief, improved sleep, and a return to vitality.</li>
+    <li>✔ <strong>Expert Endorsement</strong>: Recognized for its quality and effectiveness in restoring health.</li>
+  </ul>
+  <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6; margin-top: 20px;">
+    Your health deserves trusted solutions. Join thousands of satisfied men who have regained their confidence with <strong>Prostate Well</strong>.
+  </p>
+</section>
+
+<h3 class="hame"> Don't let skepticism hold you back any longer. If you don’t see noticeable improvement in 30 days, 
                snap the empty bottles for a full refund. No questions asked.</h3>  
      <img src="img/prowel.jpg"/>
            <h3><center>Clinical Strenght</center></h3>
