--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
           <section style="padding: 20px; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
   <h2 style="color: #2c3e50; font-family: 'Arial', sans-serif; text-align: center;">Recognized by Trusted Media: A Proven Solution for Prostate Health</h2>
   <p style="color: #34495e; font-family: 'Arial', sans-serif; line-height: 1.6;">
+ <img src="img/newp.jpg"/>
     <strong>Prostate Well</strong> has been featured in one of Nigeria's leading newspapers, highlighting its remarkable benefits for men over 40 suffering from prostate-related challenges. This recognition is a testament to our commitment to providing a natural, effective, and lasting solution for issues like frequent urination, urinary pain, and erectile dysfunction.
   </p>
   <h3 style="color: #27ae60; font-family: 'Arial', sans-serif; margin-top: 20px;">Why the Media is Talking About Prostate Well</h3>
