--- a/main.htm
+++ b/main.htm
@@ -162,7 +162,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img src="img/punch.png">
         <h3><strong> GOLD RUSH DISCOVERY <span style="color: red;">FINALLY REVEALED</span></strong></h3>
         <h4>YOU ARE ABOUT TO DISCOVER HOW TO SHRINK AND REVERSE ENLARGED PROSTATE PERMANENTLY !!</h4>
-          <img src="img/row.gif">
+          <img src="img/visit.gif">
         <a href="https://prostate-wel.xyz/" class="hover-button" onclick="fbq('track', 'Lead');">
      <img src="img/continue.png" alt="Link to ProstCure">
     Click here to continue
@@ -170,6 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         
         <img src="img/testi.jpeg">
+         <img src="img/visit.gif">
         <a href="https://prostate-wel.xyz/" class="image-link">
             <img src="img/continue.png" alt="Link to ProstCure">
         </a>
