--- a/main.htm
+++ b/main.htm
@@ -30,9 +30,9 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-    <a class="whats-app" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
-     </a>
+   <a class="whats-app" id="whatsapp-button" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+</a>
     <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -171,9 +171,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <img src="img/testi.jpeg">
          <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="image-link">
-            <img src="img/continue.png" alt="Link to ProstCure">
-        </a>
+        <a href="https://prostate-wel.xyz/" class="hover-button" onclick="fbq('track', 'Lead');">
+     <img src="img/continue.png" alt="Link to ProstCure">
+    Click here to continue
+</a>
 
         <h3>CLICK THE BUTTON ABOVE TO FIND OUT!</h3>
     </section>
