--- a/main.htm
+++ b/main.htm
@@ -171,7 +171,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <img src="img/testi.jpeg">
          <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="hover-button" onclick="fbq('track', 'Lead');">
+        <a href="https://prostate-wel.xyz/" class="hoverr-button" onclick="fbq('track', 'Lead');">
      <img src="img/continue.png" alt="Link to ProstCure">
     Click here to continue
 </a>
