--- a/main.htm
+++ b/main.htm
@@ -30,7 +30,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-   <a class="whats-app" id="whatsapp-button" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
+  <a class="whats-app" id="whatsapp-button" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank" onclick="fbq('trackCustom', 'WhatsAppClick');">
     <i class="fa fa-whatsapp my-float"></i>
 </a>
     <script>
@@ -163,16 +163,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3><strong> GOLD RUSH DISCOVERY <span style="color: red;">FINALLY REVEALED</span></strong></h3>
         <h4>YOU ARE ABOUT TO DISCOVER HOW TO SHRINK AND REVERSE ENLARGED PROSTATE PERMANENTLY !!</h4>
           <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="hover-button" onclick="fbq('track', 'Lead');">
-     <img src="img/continue.png" alt="Link to ProstCure">
+       <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button" onclick="fbq('trackCustom', 'ClickHereContinue');">
+    <img src="img/continue.png" alt="Link to ProstCure">
     Click here to continue
 </a>
 
         
         <img src="img/testi.jpeg">
          <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="hoverr-button" onclick="fbq('track', 'Lead');">
-     <img src="img/continue.png" alt="Link to ProstCure">
+        <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button" onclick="fbq('trackCustom', 'ClickHereContinue');">
+    <img src="img/continue.png" alt="Link to ProstCure">
     Click here to continue
 </a>
 
