--- a/main.htm
+++ b/main.htm
@@ -3,36 +3,24 @@
 
 <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NRWPSTZ4');</script>
-<!-- End Google Tag Manager -->
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '552864457487017');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NRWPSTZ4');
+    </script>
+    <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
-     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-  <a class="whats-app" id="whatsapp-button" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank" onclick="fbq('trackCustom', 'WhatsAppClick');">
-    <i class="fa fa-whatsapp my-float"></i>
-</a>
+    <!-- Meta Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
         {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -42,55 +30,29 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
         t.src=v;s=b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t,s)}(window, document,'script',
         'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', 'YourPixelIDGoesHere');
+        fbq('init', '552864457487017');
         fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=YourPixelIDGoesHere&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript>
+        <img height="1" width="1" style="display:none"
+             src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Meta Pixel Code -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Completely Safe</title>
+    <title>Prostate Solution</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
     <style>
-        html, body {width: auto!important;
-  overflow-x: hidden!important} 
- 
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: black;
             color: white;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh; /* Ensure the body takes at least the full height of the viewport */
-           
-        }
-        img {max-width:100%;}
-
-        header {
-            background-color: #4CAF50;
-            padding: 20px;
-            text-align: center;
-            color: white;
         }
 
-        section {
-            padding: 20px;
-            text-align: center;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            width: 100%;
-            position: fixed;
-            bottom: 0;
-        }
- .hover-button {
+        .hover-button {
             display: inline-block;
             padding: 10px 20px;
             font-size: 16px;
@@ -106,83 +68,64 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
             background-color: #0056b3;
             transform: scale(1.05);
         }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-        }
 
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .image-link {
-            display: block;
-            margin: 0 auto;
+        .whats-app {
+            position: fixed;
+            width: 90px;
+            height: 90px;
+            bottom: 15px;
+            background-color: #25d366;
+            border-radius: 50%;
             text-align: center;
+            font-size: 0;
+            box-shadow: 3px 4px 3px #999;
+            right: 10px;
+            z-index: 100;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-         .whats-app {
-    position: fixed;
-    width: 90px;
-    height: 90px;
-    bottom: 15px;
-    background-color: #25d366;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 0; /* Remove font-size */
-    box-shadow: 3px 4px 3px #999;
-    right: 10px;
-    z-index: 100;
 
-    display: flex; /* Use flexbox to center the icon */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-}
-
-.whats-app i {
-    color: #FFF;
-    font-size: 14vw; /* Make the icon responsive with a relative size */
-}
+        .whats-app i {
+            color: #FFF;
+            font-size: 40px;
+        }
     </style>
 </head>
 
 <body>
-    <script>
-  fbq('track', 'ViewContent');
-</script>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRWPSTZ4"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRWPSTZ4"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-    <section>
-        <img src="img/punch.png">
-        <h3><strong> GOLD RUSH DISCOVERY <span style="color: red;">FINALLY REVEALED</span></strong></h3>
-        <h4>YOU ARE ABOUT TO DISCOVER HOW TO SHRINK AND REVERSE ENLARGED PROSTATE PERMANENTLY !!</h4>
-          <img src="img/visit.gif">
-       <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button" onclick="fbq('trackCustom', 'ClickHereContinue');">
-    <img src="img/continue.png" alt="Link to ProstCure">
-    Click here to continue
-</a>
+    <section style="text-align: center; padding: 20px;">
+        <h3>Discover How to Shrink and Reverse Enlarged Prostate Permanently!</h3>
 
-        
-        <img src="img/testi.jpeg">
-         <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button" onclick="fbq('trackCustom', 'ClickHereContinue');">
-    <img src="img/continue.png" alt="Link to ProstCure">
-    Click here to continue
-</a>
+        <!-- "Click Here to Continue" Button -->
+        <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button">
+            Click Here to Continue
+        </a>
 
-        <h3>CLICK THE BUTTON ABOVE TO FIND OUT!</h3>
+        <!-- WhatsApp Button -->
+        <a class="whats-app" id="whatsapp-button"
+           href="https://api.whatsapp.com/send?phone=2348134402903&text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
+            <i class="fa fa-whatsapp"></i>
+        </a>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Completely Safe. All rights reserved.</p>
-    </footer>
+    <script>
+        // Add manual tracking for Facebook
+        document.getElementById('click-here-button').addEventListener('click', function () {
+            fbq('track', 'ClickHereContinue');
+        });
 
+        document.getElementById('whatsapp-button').addEventListener('click', function () {
+            fbq('track', 'WhatsAppClick');
+        });
+    </script>
 </body>
 
 </html>
