--- a/main.htm
+++ b/main.htm
@@ -102,13 +102,20 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <section style="text-align: center; padding: 20px;">
-        <h3>Discover How to Shrink and Reverse Enlarged Prostate Permanently!</h3>
+        <img src="img/punch.png">
+        <h3><strong> GOLD RUSH DISCOVERY <span style="color: red;">FINALLY REVEALED</span></strong></h3>
+        <h4>YOU ARE ABOUT TO DISCOVER HOW TO SHRINK AND REVERSE ENLARGED PROSTATE PERMANENTLY !!</h4>
+          <img src="img/visit.gif">
 
         <!-- "Click Here to Continue" Button -->
         <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button">
             Click Here to Continue
         </a>
-
+        <img src="img/testi.jpeg">
+         <img src="img/visit.gif">
+         <!-- "Click Here to Continue" Button -->
+        <a href="https://prostate-wel.xyz/" class="hover-button" id="click-here-button">
+            Click Here to Continue
         <!-- WhatsApp Button -->
         <a class="whats-app" id="whatsapp-button"
            href="https://api.whatsapp.com/send?phone=2348134402903&text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
