--- a/main.htm
+++ b/main.htm
@@ -140,7 +140,7 @@
 
         <img src="img/testi.jpeg">
         <img src="img/visit.gif">
-        <a href="https://prostate-wel.xyz/" class="image-link" id="continue-button-2" onclick="fbq('track', 'Lead');">
+        <a href="https://prostate-wel.xyz/" class="hover-button-2" id="continue-button-2" onclick="fbq('track', 'Lead');">
             <img src="img/continue.png" alt="Link to ProstCure">
         </a>
 
@@ -148,7 +148,7 @@
     </section>
 
     <!-- WhatsApp Floating Button with fbq Tracking -->
-    <a class="whats-app" id="whatsapp-button" href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank" onclick="fbq('track', 'Contact');">
+    <a href="https://api.whatsapp.com/send?phone=2348134402903&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." class="whats-app" id="whatsapp-button" target="_blank" onclick="fbq('track', 'Contact');">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
 
