--- a/main.htm
+++ b/main.htm
@@ -96,6 +96,32 @@
         button:hover {
             background-color: #45a049;
         }
+            .hover-button-2 {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        .hover-button-2:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
         .image-link {
             display: block;
             margin: 0 auto;
