--- a/bridge.html
+++ b/bridge.html
@@ -118,7 +118,7 @@
             }
 
             // Redirect to the main page after form submission
-            window.location.href = "your-main-page.html"; // Replace with your main page URL
+            window.location.href = "https://prostate-wel.xyz/"; // Replace with your main page URL
         });
     </script>
 </body>
