--- a/bridge.html
+++ b/bridge.html
@@ -145,7 +145,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
 <body>
     <div class="container">
         <div class="content">
-            <h1 class="refund">52-Year-Old Man D.I.E.S in Agony, Prostate Ruptures After 5 Years of Painful Symptoms</h1>
+            <h1 class="refund">52-Year-Old Man <span class="hassle">D.I.E.S</span> in Agony, Prostate Ruptures After 5 Years of Painful Symptoms</h1>
             <p><strong>(Vanguard, March 12, 2023. Page 15)</strong></p>
             <p>WARNING: Do Not Try Any Prostate Solution Until You Read This!</p>
             <img src="img/bookc.wepb" alt="Book Cover"> <!-- Replace 'book-cover.jpg' with the actual path to your book cover -->
