--- a/bridge.html
+++ b/bridge.html
@@ -148,7 +148,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
             <h1 class="refund">52-Year-Old Man <span class="hassle">D.I.E.S</span> in Agony, Prostate Ruptures After 5 Years of Painful Symptoms</h1>
             <p><strong>(Vanguard, March 12, 2023. Page 15)</strong></p>
             <p>WARNING: Do Not Try Any Prostate Solution Until You Read This!</p>
-            <img src="img/bookc.wepb" alt="Book Cover"> <!-- Replace 'book-cover.jpg' with the actual path to your book cover -->
+            <img src="img/bookc.png" alt="Book Cover"> <!-- Replace 'book-cover.jpg' with the actual path to your book cover -->
         </div>
         <div class="form-section">
             <h2>Fill This Form to Get a Free Copy to Your WhatsApp or Email</h2>
