--- a/bridge.html
+++ b/bridge.html
@@ -156,7 +156,7 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
                 <input type="text" id="name" name="name" placeholder="Name" required>
                 <input type="tel" id="phone" name="phone" placeholder="Phone No" required>
                 <input type="tel" id="confirmPhone" name="confirmPhone" placeholder="Confirm Phone No" required>
-                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="email" id="email" name="email" placeholder="Email">
                 <button type="submit">Submit</button>
             </form>
         </div>
