--- a/bridge.html
+++ b/bridge.html
@@ -28,6 +28,22 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
 
   gtag('config', 'G-TH8ZJK66S3');
 </script>
+ <!-- Meta Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s) {
+            if(f.fbq) return; n=f.fbq=function(){n.callMethod? 
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq) f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0'; 
+            n.queue=[]; t=b.createElement(e); t.async=!0; t.src=v; 
+            s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)
+        }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '552864457487017');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1" />
+    </noscript>
+    <!-- End Meta Pixel Code -->
 <title>
      LASTING SOLUTION TO PROSTRATE ENLARGEMENT</title>
      <meta name="description" content=" learn how to shrink prostate enlargement, cure enlarged prostate, end painful urination and other Uti">
