--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <li>💔 Reduced Sexual Performance or erectile dysfunction</li>
 </ul>
 <img src="img/illu.jpeg">
-        <p><b>Are you not tired of using your Contiflo, Duodart or Tamulosin for maintaining the bondage of Prostate Enlargement which many doctors
+        <p><b>Are you not tired of using your Contiflo, D.u.o.d.a.r.t  for maintaining the bondage of Prostate Enlargement which many doctors
              had made you believe no cure for?
 The truth is this most of this orthodox medication has a lot of side effect which you wont be told  and some would only give temporary solutions
              as they are to maintain symptoms and not fully cure, now you are getting the information about the herbal medication that has helped thousands of Nigerians
