--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@ document.addEventListener('DOMContentLoaded', function() {
 <img src="img/illu.jpeg">
         <p><b>Are you not tired of using your Contiflo, D.u.o.d.a.r.t  for maintaining the bondage of Prostate Enlargement which many doctors
              had made you believe no cure for?
-The truth is this most of this orthodox medication has a lot of side effect which you wont be told  and some would only give temporary solutions
-             as they are to maintain symptoms and not fully cure, now you are getting the information about the herbal medication that has helped thousands of Nigerians
+The truth is this most of this orthodox treatment  has a lot of side effect which you wont be told  and some would only give temporary solutions
+             as they are to maintain symptoms and not fully cure, now you are getting the information about the herbal Treatment that has helped thousands of Nigerians
              at your tip so if you decide not to act now it shows you are enjoying using your daily Contiflo, Duodart, Tamulosin etc.n.</b></p>
 
         <h2 class="definition">Attention Nigerian Men:</h2>
@@ -419,7 +419,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 
 
 <p><b>Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. 
-     Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.</p></b>
+     Thus, you can combine it with any Treatments you have been using for certain ailments you are experiencing.</p></b>
  <section class="prostate-well-section">
         <h1>Here’s How Prostate Cure Plus Works to Solve Your Prostate Problems Permanently!</h1>
         <p>Prostate Cure Plus is made with all-natural ingredients that work together to shrink your prostate, lower your PSA levels, and stop the pain and discomfort you've been feeling.</p>
