--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ document.addEventListener('DOMContentLoaded', function() {
              had made you believe no cure for?
 The truth is this most of this orthodox treatment  has a lot of side effect which you wont be told  and some would only give temporary solutions
              as they are to maintain symptoms and not fully cure, now you are getting the information about the herbal Treatment that has helped thousands of Nigerians
-             at your tip so if you decide not to act now it shows you are enjoying using your daily Contiflo, Duodart, Tamulosin etc.n.</b></p>
+             at your tip so if you decide not to act now it shows you are enjoying using your daily temporary ccontifloo and others etc.n.</b></p>
 
         <h2 class="definition">Attention Nigerian Men:</h2>
         <p>If you want to achieve permanent relief from prostate problems, urinate well, end urinary pain, stop frequent urination, and enjoy a healthy sex life again, then this will be the most exciting message you will ever read.</p>
