--- a/bridge.html
+++ b/bridge.html
@@ -170,8 +170,8 @@ src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
             <h2>Fill This Form to Get a Free Copy to Your WhatsApp or Email</h2>
             <form id="bridgeForm" action="https://formspree.io/f/mayavdlg" method="POST">
                 <input type="text" id="name" name="name" placeholder="Name" required>
-                <input type="tel" id="phone" name="phone" placeholder="Phone No" required>
-                <input type="tel" id="confirmPhone" name="confirmPhone" placeholder="Confirm Phone No" required>
+               <input type="tel" name="Phone no" placeholder="Phone No" minlength="11" pattern="\d{11}" title="Please check your number well" required />
+                <input type="tel" name="Phone no" placeholder="Confirm Phone No" minlength="11" pattern="\d{11}" title="Please check your number well" required />
                 <input type="email" id="email" name="email" placeholder="Email">
                 <button type="submit">Submit</button>
             </form>
