--- a/bridge.html
+++ b/bridge.html
@@ -18,16 +18,9 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=552864457487017&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-          <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TH8ZJK66S3">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-TH8ZJK66S3');
-</script>
+       <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16797992264">
+            </script>    
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16797992264'); </script>
  <!-- Meta Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s) {
