--- a/thank.html
+++ b/thank.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', { 'send_to': 'AW-16797992264/ai4fCPCz3vIZEMiK9Mk-', 'value': 1.0, 'currency': 'USD' }); </script>
+<!-- Event snippet for Buy conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16797992264/wcEPCOObkPkZEMiK9Mk-',
+      'transaction_id': ''
+  });
+</script>
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
